# PianoRollVideoToMIDI

./: .gitignore  README.md  flake.nix  pyproject.toml
src/pianorollvideotomidi/: __init__.py  __main__.py
