[project]
name = "pianorollvideotomidi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Glitch752", email = "xxGlitch752xx@gmail.com" }
]
dependencies = [
    "yt-dlp>=2025.1.26",
    "av>=14.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pyqt6>=6.8.0",
    "mido>=1.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"start" = "pianorollvideotomidi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pianorollvideotomidi"]
